Revision history for Rex

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]
 - Fix setting custom waitpid_blocking_sleep_time

 [DOCUMENTATION]

 [ENHANCEMENTS]
 - Add write_utf8_files feature flag to control encoding of files written by Rex

 [MAJOR]

 [MINOR]

 [NEW FEATURES]

 [REVISION]

1.8.2 2020-03-05 Ferenc Erki <erkiferenc@gmail.com>
 [BUG FIXES]
 - Fix namespace separator checks for tasks directly in Rexfile

 [REVISION]
 - Fix Travis builds on OS X

1.8.1 2020-02-05 Ferenc Erki <erkiferenc@gmail.com>
 [DOCUMENTATION]
 - Document embedded templates

 [REVISION]
 - Reformat changelog to match CPAN specifications
 - Use NextRelease to update release info
 - Use NextVersion::Semantic for versioning

1.8.0 2020-01-05 Ferenc Erki <erkiferenc@gmail.com>
 - Map commit authors to their canonical name and email - Ferenc Erki
 - Add contributors without commits on master branch - Ferenc Erki
 - Generate CONTRIBUTORS file - Ferenc Erki
 - Added Rex::Pkg::VoidLinux using XBPS - Leah Neukirchen
 - Added Rex::Service::VoidLinux using runit - Leah Neukirchen
 - Added Void Linux - Leah Neukirchen
 - Make waitpid blocking sleep time configurable - Ferenc Erki
 - Match waitpid blocking sleep between fork managers - Ferenc Erki
 - Add Kwalitee tests - Ferenc Erki
 - Update Perl::Tidy on each Travis build - Ferenc Erki
 - Skip bin tidiness check on Windows and Mac - Ferenc Erki

1.7.1 2019-12-05 Ferenc Erki <erkiferenc@gmail.com>
 - Update supported Perl versions - Ferenc Erki
 - Don't skip all markdown files - Ferenc Erki
 - Update synopsis - Ferenc Erki
 - Update CPAN metadata - Ferenc Erki
 - Update name and description in POD - Ferenc Erki
 - Clarify POD - Ferenc Erki
 - Fix POD formatting - Ferenc Erki
 - Fix CMDB examples (fix #1151) - Ferenc Erki
 - Test on OS X with Travis CI - Ferenc Erki
 - Fix getting current directory in Windows - Ferenc Erki
 - Skip symlink tests on Windows - Ferenc Erki
 - Test on Windows with Travis CI - Ferenc Erki
 - Update description - Ferenc Erki
